# cargo-version-bumped-checker

./: .gitignore  Cargo.toml  README.md  action.yml  actions.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: hello.yml  self-running.yml
src/: index.ts
