[package]
name = "amazing-cargo-file-you-should-read"
version = "1.0.0"
edition = "2024"
authors = ['Ran Vargas', 'AoX.dev', 'ScrapingPenguins.com']

[[bin]]
name = "amazing-cargo-file-you-should-read"
path = "src/main.rs"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
actix-web = "4.9.0"
strum = "0.27.2"
strum_macros = "0.27.2"
derivative = "2.2.0"


[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.20.3"
